0026583: Eliminate compile warnings obtained by building occt with vc14: declaration of local variable hides function parameter

Eliminated warnings about "declaration of local variable hides function parameter"