src/BRepAlgo/BRepAlgo_Image.cxx
@@ -298,9 +298,9 @@ void BRepAlgo_Image::Filter(const TopoDS_Shape&     S,
     Change = Standard_False;
     TopTools_DataMapIteratorOfDataMapOfShapeShape mit(up);
     for (; mit.More(); mit.Next()) {
-      const TopoDS_Shape& S = mit.Key();
-      if (S.ShapeType() == T && !M.Contains(S)) {
-	Remove(S);
+      const TopoDS_Shape& aS = mit.Key();
+      if (aS.ShapeType() == T && !M.Contains(aS)) {
+	Remove(aS);
 	Change = Standard_True;
 	break;
       }
