src/TNaming/TNaming_NamingTool.cxx
@@ -96,8 +96,8 @@ static void LastModif(      TNaming_NewShapeIterator& it,
       YaModif = Standard_True;
       TNaming_NewShapeIterator it2(it);
       if (!it2.More()) {
-	const TopoDS_Shape& S   = it.Shape();
-	MS.Add (S);  // Modified
+	const TopoDS_Shape& aS   = it.Shape();
+	MS.Add (aS);  // Modified
       }
       else
 	LastModif(it2,it.Shape(),MS,Updated,Forbiden);
